--- a/3_web_app_filtros/src/main/resources/application.properties
+++ b/3_web_app_filtros/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=123123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate show SQL
+spring.jpa.show-sql = true
